--- a/HTML - Personal Site/contact.html
+++ b/HTML - Personal Site/contact.html
@@ -8,7 +8,7 @@
     <h2>Contact Options</h2>
     <p>Address</p>
     <p>1234567890</p>
-    <p>Email: amrodia@gmail.com</p>
+    <p>Email: amrodiavibhor@gmail.com</p>
     <form class="" action="mailto:vamrodia@cisco.com" method="post" enctype="text/plain">
         <label>Your Name:</label>
         <input type="text" name="yourName" value=""><br>
