--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -3,26 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title> 🏌️ Vibhor's Personal Site</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
-<style>
 
-    body {
-        background-color: #32C1CD;
-    }
-
-    hr {
-        background-color: blue;
-        border-style: none;
-    }
-
-</style>
 <body>
     <table cellspacing="20">
         <tr>
             <td><img src="Images/vamrodia-modified.png" alt="Vibhor's Profile Picture"></td>
             <td><h1> Vibhor </h1>
             <p><em>Technical Leader - Advanced Threat TAC, <strong><a href="https://www.cisco.com/"> Cisco Systems</a></strong></em></p>
-            <p>I am a Technical Leader with the Advanced Threat TAC team in Cisco Systems. I love Coffee</p></td>
+            <p>I am a Technical Leader with the Advanced Threat TAC team in Cisco Systems. I love Coffee.</p></td>
         </tr>
     </table>
     <hr>
