--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -9,7 +9,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="Images/vamrodia-modified.png" alt="Vibhor's Profile Picture"></td>
+            <td><img src="Images/vamrodia-new.png" alt="Vibhor's Profile Picture"></td>
             <td><h1> Vibhor </h1>
             <p><em>Technical Leader - Advanced Threat TAC, <strong><a href="https://www.cisco.com/"> Cisco Systems</a></strong></em></p>
             <p>I am a Technical Leader with the Advanced Threat TAC team in Cisco Systems. I love Coffee.</p></td>
