--- a/CSS - My Site/index.html
+++ b/CSS - My Site/index.html
@@ -5,13 +5,14 @@
     <title>My Site - Vibhor</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="favicon.ico">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
   </head>
   <body>
-    <img src="images/cloud.png" alt="cloud-img">
     <div class="top-container">
-      <h1>Vibhor</h1>
-      <p>I am "trying" to be a programmer</p>
-      <img src="images/cloud.png" alt="cloud-img">
+      <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+      <h1>I'm Vibhor.</h1>
+      <p>"Trying" to be a programmer</p>
+      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
       <img src="images/mountain.png" alt="mountain-img">
     </div>
     <div class="middle-container">
