--- a/CSS - My Site/index.html
+++ b/CSS - My Site/index.html
@@ -5,22 +5,58 @@
     <title>My Site - Vibhor</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="favicon.ico">
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,300&family=Merriweather:wght@300&family=Mochiy+Pop+P+One&family=Roboto:wght@100&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="top-container">
       <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
       <h1>I'm Vibhor.</h1>
-      <p>"Trying" to be a programmer</p>
+      <h2><a class="pro">"Trying"</a> to be a programmer</h2>
       <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
       <img src="images/mountain.png" alt="mountain-img">
     </div>
+
     <div class="middle-container">
+      <div class="profile">
+        <img class="personal-image" src="/Users/vamrodia/Web Dev/HTML - Personal Site/Images/vamrodia-new.png" alt="profile-picture" height="200">
+        <h2>Hello.</h2>
+        <p>I am a proud parent of a "small and cute" beagle and the most "deceiving big and strong" lab </p>
+        <img class="doggy-image" src="/Users/vamrodia/Web Dev/CSS - My Site/images/doggy.gif" alt="doggy-picture" >
+      </div>
+      <hr>
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <h3>Playing Cricket.</h3>
+          <div style="width:100%;height:0;padding-bottom:47%;position:relative;"><iframe src="https://giphy.com/embed/3oeSASdA0hqt14lAnC" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div><p><a href="https://giphy.com/gifs/bypriyashah-india-cricket-3oeSASdA0hqt14lAnC"></a></p>
+          <p>"I can't really say I'm batting badly. I'm not batting long enough to be batting badly"</p>
+        </div>
+        <div class="skill-row">
+          <h3>Playing Soccer.</h3>
+          <div style="width:100%;height:0;padding-bottom:56%;position:relative;"><iframe src="https://giphy.com/embed/jx4ZHQHKYV0JP7wJYk" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div><p><a href="https://giphy.com/gifs/playsports-funny-fail-romelu-jx4ZHQHKYV0JP7wJYk"></a></p>
+          <p>“The rules of soccer are very simple, basically it is this: if it moves, kick it. If it doesn’t move, kick it until it does.”</p>
+        </div>
+        <div class="skill-row">
+          <h3>Playing Golf.</h3>
+          <div style="width:100%;height:0;padding-bottom:56%;position:relative;"><iframe src="https://giphy.com/embed/akiHW8qDydkm4" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div><p><a href="https://giphy.com/gifs/win-angel-golf-akiHW8qDydkm4"></a></p>
+          <p>“I know I am getting better at golf because I am hitting fewer spectators.”</p>
+        </div>
+      </div>
+      <hr>
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>They both love to socialize</h3>
+        <p>Most of the time thye are very well behaved and do not bark at stangers. Naahhh.. I am joking.</p>
+        <a href="mailto:amrodiavibhor@email.com" class="BUTTON_WKT">CONTACT ME</a>
+      </div>
 
-    </div>
     <div class="bottom-container">
-
+      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/">Twitter</a>
+      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <p class="copyright"> © 2021 Vibhor Humaari Company </p>
     </div>
+
 
 
 
