--- a/CSS - My Site/index.html
+++ b/CSS - My Site/index.html
@@ -46,7 +46,7 @@
       <div class="contact-me">
         <h2>Get In Touch</h2>
         <h3>They both love to socialize</h3>
-        <p>Most of the time thye are very well behaved and do not bark at stangers. Naahhh.. I am joking.</p>
+        <p>Most of the time they are very well behaved and do not bark at stangers. Naahhh.. I am joking.</p>
         <a href="mailto:amrodiavibhor@email.com" class="BUTTON_WKT">CONTACT ME</a>
       </div>
 
