--- a/CSS - My Site/index.html
+++ b/CSS - My Site/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>My Site - Vibhor</title>
+    <title>My First Site - Vibhor</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,300&family=Merriweather:wght@300&family=Mochiy+Pop+P+One&family=Roboto:wght@100&display=swap" rel="stylesheet">
